--- a/style.css
+++ b/style.css
@@ -9,3 +9,24 @@ header {
     font-weight:bolder;
     font-size: 30px;
 }
+
+.card {
+    margin: 10px;
+}
+
+.colUno {
+    background-color: white;
+}
+
+.colDos {
+    background-color: lightblue;
+}
+
+.histBtnRow {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.cardTodayDate {
+    font-size: 20px;
+}
